output_dir/DashSQLParser.py
# Generated from ./DashSQLParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class DashSQLParser ( Parser ):

    grammarFileName = "DashSQLParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'create'", "'with'", "'insert'", 
                     "'to'", "'where'", "'from'", "'write'", "'select'", 
                     "'as'", "'join'", "'and'", "'or'", "'filter'", "'by'", 
                     "'sort'", "'desc'", "'update'", "'set'", "'for'", "'in'", 
                     "'while'", "'if'", "'else'", "'switch'", "'case'", 
                     "'is'", "'default'", "'function'", "'return'", "'int'", 
                     "'string'", "'float'", "'date'", "'bool'", "'..'", 
                     "'+'", "'-'", "'/'", "'%'", "'=='", "'!='", "'>='", 
                     "'<='", "'>'", "'<'", "'not'", "'*'", "'('", "')'", 
                     "'['", "']'", "','", "':'", "'='", "'true'", "'false'" ]

    symbolicNames = [ "<INVALID>", "NEWLINE", "CREATE", "WITH", "INSERT", 
                      "TO", "WHERE", "FROM", "WRITE", "SELECT", "AS", "JOIN", 
                      "AND", "OR", "FILTER", "BY", "SORT", "DESC", "UPDATE", 
                      "SET", "FOR", "IN", "WHILE", "IF", "ELSE", "SWITCH", 
                      "CASE", "IS", "DEFAULT", "FUNCTION", "RETURN", "INT_TYPE", 
                      "STRING_TYPE", "FLOAT_TYPE", "DATE_TYPE", "BOOL_TYPE", 
                      "DOT2", "PLUS", "MINUS", "DIV", "MOD", "EQ", "NEQ", 
                      "GTE", "LTE", "GT", "LT", "NOT", "MULT", "LPAREN", 
                      "RPAREN", "LBRACKET", "RBRACKET", "COMMA", "COLON", 
                      "EQUALS", "TRUE_LIT", "FALSE_LIT", "INTEGER", "FLOAT_NUM", 
                      "STRING_LIT", "ID", "WS", "COMMENT" ]

    RULE_program = 0
    RULE_statement = 1
    RULE_simple_stmt = 2
    RULE_compound_stmt = 3
    RULE_function_def = 4
    RULE_param_list = 5
    RULE_param_def = 6
    RULE_assignment_stmt = 7
    RULE_id_list = 8
    RULE_expr_list = 9
    RULE_return_stmt = 10
    RULE_create_table_stmt = 11
    RULE_column_def_list = 12
    RULE_column_def = 13
    RULE_type_name = 14
    RULE_insert_stmt = 15
    RULE_where_from_condition = 16
    RULE_insert_row = 17
    RULE_update_stmt = 18
    RULE_update_assignment = 19
    RULE_write_stmt = 20
    RULE_select_stmt = 21
    RULE_column_list = 22
    RULE_where_condition = 23
    RULE_join_stmt = 24
    RULE_filter_stmt = 25
    RULE_sort_stmt = 26
    RULE_for_stmt = 27
    RULE_while_stmt = 28
    RULE_if_stmt = 29
    RULE_switch_stmt = 30
    RULE_case_stmt = 31
    RULE_default_stmt = 32
    RULE_function_call_stmt = 33
    RULE_expr = 34
    RULE_atom = 35
    RULE_function_call = 36
    RULE_literal_value = 37
    RULE_condition = 38

    ruleNames =  [ "program", "statement", "simple_stmt", "compound_stmt", 
                   "function_def", "param_list", "param_def", "assignment_stmt", 
                   "id_list", "expr_list", "return_stmt", "create_table_stmt", 
                   "column_def_list", "column_def", "type_name", "insert_stmt", 
                   "where_from_condition", "insert_row", "update_stmt", 
                   "update_assignment", "write_stmt", "select_stmt", "column_list", 
                   "where_condition", "join_stmt", "filter_stmt", "sort_stmt", 
                   "for_stmt", "while_stmt", "if_stmt", "switch_stmt", "case_stmt", 
                   "default_stmt", "function_call_stmt", "expr", "atom", 
                   "function_call", "literal_value", "condition" ]

    EOF = Token.EOF
    NEWLINE=1
    CREATE=2
    WITH=3
    INSERT=4
    TO=5
    WHERE=6
    FROM=7
    WRITE=8
    SELECT=9
    AS=10
    JOIN=11
    AND=12
    OR=13
    FILTER=14
    BY=15
    SORT=16
    DESC=17
    UPDATE=18
    SET=19
    FOR=20
    IN=21
    WHILE=22
    IF=23
    ELSE=24
    SWITCH=25
    CASE=26
    IS=27
    DEFAULT=28
    FUNCTION=29
    RETURN=30
    INT_TYPE=31
    STRING_TYPE=32
    FLOAT_TYPE=33
    DATE_TYPE=34
    BOOL_TYPE=35
    DOT2=36
    PLUS=37
    MINUS=38
    DIV=39
    MOD=40
    EQ=41
    NEQ=42
    GTE=43
    LTE=44
    GT=45
    LT=46
    NOT=47
    MULT=48
    LPAREN=49
    RPAREN=50
    LBRACKET=51
    RBRACKET=52
    COMMA=53
    COLON=54
    EQUALS=55
    TRUE_LIT=56
    FALSE_LIT=57
    INTEGER=58
    FLOAT_NUM=59
    STRING_LIT=60
    ID=61
    WS=62
    COMMENT=63

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(DashSQLParser.EOF, 0)

        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DashSQLParser.StatementContext)
            else:
                return self.getTypedRuleContext(DashSQLParser.StatementContext,i)


        def getRuleIndex(self):
            return DashSQLParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = DashSQLParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 81
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 2305843010871839508) != 0):
                self.state = 78
                self.statement()
                self.state = 83
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 84
            self.match(DashSQLParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def simple_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Simple_stmtContext,0)


        def compound_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Compound_stmtContext,0)


        def getRuleIndex(self):
            return DashSQLParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = DashSQLParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_statement)
        try:
            self.state = 88
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2, 4, 8, 9, 11, 14, 16, 18, 30, 61]:
                self.enterOuterAlt(localctx, 1)
                self.state = 86
                self.simple_stmt()
                pass
            elif token in [20, 22, 23, 25, 29]:
                self.enterOuterAlt(localctx, 2)
                self.state = 87
                self.compound_stmt()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Simple_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def create_table_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Create_table_stmtContext,0)


        def insert_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Insert_stmtContext,0)


        def update_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Update_stmtContext,0)


        def write_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Write_stmtContext,0)


        def select_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Select_stmtContext,0)


        def join_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Join_stmtContext,0)


        def filter_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Filter_stmtContext,0)


        def sort_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Sort_stmtContext,0)


        def assignment_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Assignment_stmtContext,0)


        def function_call_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Function_call_stmtContext,0)


        def return_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Return_stmtContext,0)


        def getRuleIndex(self):
            return DashSQLParser.RULE_simple_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimple_stmt" ):
                listener.enterSimple_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimple_stmt" ):
                listener.exitSimple_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimple_stmt" ):
                return visitor.visitSimple_stmt(self)
            else:
                return visitor.visitChildren(self)




    def simple_stmt(self):

        localctx = DashSQLParser.Simple_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_simple_stmt)
        try:
            self.state = 101
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 90
                self.create_table_stmt()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 91
                self.insert_stmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 92
                self.update_stmt()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 93
                self.write_stmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 94
                self.select_stmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 95
                self.join_stmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 96
                self.filter_stmt()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 97
                self.sort_stmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 98
                self.assignment_stmt()
                pass

            elif la_ == 10:
                self.enterOuterAlt(localctx, 10)
                self.state = 99
                self.function_call_stmt()
                pass

            elif la_ == 11:
                self.enterOuterAlt(localctx, 11)
                self.state = 100
                self.return_stmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Compound_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def if_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.If_stmtContext,0)


        def for_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.For_stmtContext,0)


        def while_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.While_stmtContext,0)


        def switch_stmt(self):
            return self.getTypedRuleContext(DashSQLParser.Switch_stmtContext,0)


        def function_def(self):
            return self.getTypedRuleContext(DashSQLParser.Function_defContext,0)


        def getRuleIndex(self):
            return DashSQLParser.RULE_compound_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCompound_stmt" ):
                listener.enterCompound_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCompound_stmt" ):
                listener.exitCompound_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCompound_stmt" ):
                return visitor.visitCompound_stmt(self)
            else:
                return visitor.visitChildren(self)




    def compound_stmt(self):

        localctx = DashSQLParser.Compound_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_compound_stmt)
        try:
            self.state = 108
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [23]:
                self.enterOuterAlt(localctx, 1)
                self.state = 103
                self.if_stmt()
                pass
            elif token in [20]:
                self.enterOuterAlt(localctx, 2)
                self.state = 104
                self.for_stmt()
                pass
            elif token in [22]:
                self.enterOuterAlt(localctx, 3)
                self.state = 105
                self.while_stmt()
                pass
            elif token in [25]:
                self.enterOuterAlt(localctx, 4)
                self.state = 106
                self.switch_stmt()
                pass
            elif token in [29]:
                self.enterOuterAlt(localctx, 5)
                self.state = 107
                self.function_def()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Function_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FUNCTION(self):
            return self.getToken(DashSQLParser.FUNCTION, 0)

        def ID(self):
            return self.getToken(DashSQLParser.ID, 0)

        def LPAREN(self):
            return self.getToken(DashSQLParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(DashSQLParser.RPAREN, 0)

        def COLON(self):
            return self.getToken(DashSQLParser.COLON, 0)

        def param_list(self):
            return self.getTypedRuleContext(DashSQLParser.Param_listContext,0)


        def statement(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DashSQLParser.StatementContext)
            else:
                return self.getTypedRuleContext(DashSQLParser.StatementContext,i)


        def getRuleIndex(self):
            return DashSQLParser.RULE_function_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunction_def" ):
                listener.enterFunction_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunction_def" ):
                listener.exitFunction_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunction_def" ):
                return visitor.visitFunction_def(self)
            else:
                return visitor.visitChildren(self)




    def function_def(self):

        localctx = DashSQLParser.Function_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_function_def)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 110
            self.match(DashSQLParser.FUNCTION)
            self.state = 111
            self.match(DashSQLParser.ID)
            self.state = 112
            self.match(DashSQLParser.LPAREN)
            self.state = 114
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==61:
                self.state = 113
                self.param_list()


            self.state = 116
            self.match(DashSQLParser.RPAREN)
            self.state = 117
            self.match(DashSQLParser.COLON)
            self.state = 119 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 118
                    self.statement()

                else:
                    raise NoViableAltException(self)
                self.state = 121 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,5,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param_def(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DashSQLParser.Param_defContext)
            else:
                return self.getTypedRuleContext(DashSQLParser.Param_defContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DashSQLParser.COMMA)
            else:
                return self.getToken(DashSQLParser.COMMA, i)

        def getRuleIndex(self):
            return DashSQLParser.RULE_param_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_list" ):
                listener.enterParam_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_list" ):
                listener.exitParam_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_list" ):
                return visitor.visitParam_list(self)
            else:
                return visitor.visitChildren(self)




    def param_list(self):

        localctx = DashSQLParser.Param_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_param_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 123
            self.param_def()
            self.state = 128
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==53:
                self.state = 124
                self.match(DashSQLParser.COMMA)
                self.state = 125
                self.param_def()
                self.state = 130
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Param_defContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(DashSQLParser.ID, 0)

        def COLON(self):
            return self.getToken(DashSQLParser.COLON, 0)

        def type_name(self):
            return self.getTypedRuleContext(DashSQLParser.Type_nameContext,0)


        def getRuleIndex(self):
            return DashSQLParser.RULE_param_def

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam_def" ):
                listener.enterParam_def(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam_def" ):
                listener.exitParam_def(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam_def" ):
                return visitor.visitParam_def(self)
            else:
                return visitor.visitChildren(self)




    def param_def(self):

        localctx = DashSQLParser.Param_defContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_param_def)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 131
            self.match(DashSQLParser.ID)
            self.state = 132
            self.match(DashSQLParser.COLON)
            self.state = 133
            self.type_name()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Assignment_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return DashSQLParser.RULE_assignment_stmt

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class SimpleAssignmentContext(Assignment_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DashSQLParser.Assignment_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(DashSQLParser.ID, 0)
        def EQUALS(self):
            return self.getToken(DashSQLParser.EQUALS, 0)
        def expr(self):
            return self.getTypedRuleContext(DashSQLParser.ExprContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterSimpleAssignment" ):
                listener.enterSimpleAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitSimpleAssignment" ):
                listener.exitSimpleAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitSimpleAssignment" ):
                return visitor.visitSimpleAssignment(self)
            else:
                return visitor.visitChildren(self)


    class MultiAssignmentContext(Assignment_stmtContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a DashSQLParser.Assignment_stmtContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def id_list(self):
            return self.getTypedRuleContext(DashSQLParser.Id_listContext,0)

        def EQUALS(self):
            return self.getToken(DashSQLParser.EQUALS, 0)
        def expr_list(self):
            return self.getTypedRuleContext(DashSQLParser.Expr_listContext,0)


        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterMultiAssignment" ):
                listener.enterMultiAssignment(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitMultiAssignment" ):
                listener.exitMultiAssignment(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitMultiAssignment" ):
                return visitor.visitMultiAssignment(self)
            else:
                return visitor.visitChildren(self)



    def assignment_stmt(self):

        localctx = DashSQLParser.Assignment_stmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_assignment_stmt)
        try:
            self.state = 142
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                localctx = DashSQLParser.SimpleAssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 135
                self.match(DashSQLParser.ID)
                self.state = 136
                self.match(DashSQLParser.EQUALS)
                self.state = 137
                self.expr(0)
                pass

            elif la_ == 2:
                localctx = DashSQLParser.MultiAssignmentContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 138
                self.id_list()
                self.state = 139
                self.match(DashSQLParser.EQUALS)
                self.state = 140
                self.expr_list()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Id_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self, i:int=None):
            if i is None:
                return self.getTokens(DashSQLParser.ID)
            else:
                return self.getToken(DashSQLParser.ID, i)

        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DashSQLParser.COMMA)
            else:
                return self.getToken(DashSQLParser.COMMA, i)

        def getRuleIndex(self):
            return DashSQLParser.RULE_id_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterId_list" ):
                listener.enterId_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitId_list" ):
                listener.exitId_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitId_list" ):
                return visitor.visitId_list(self)
            else:
                return visitor.visitChildren(self)




    def id_list(self):

        localctx = DashSQLParser.Id_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_id_list)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 144
            self.match(DashSQLParser.ID)
            self.state = 149
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==53:
                self.state = 145
                self.match(DashSQLParser.COMMA)
                self.state = 146
                self.match(DashSQLParser.ID)
                self.state = 151
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Expr_listContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(DashSQLParser.ExprContext)
            else:
                return self.getTypedRuleContext(DashSQLParser.ExprContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(DashSQLParser.COMMA)
            else:
                return self.getToken(DashSQLParser.COMMA, i)

        def getRuleIndex(self):
            return DashSQLParser.RULE_expr_list

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpr_list" ):
                listener.enterExpr_list(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpr_list" ):
                listener.exitExpr_list(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExpr_list" ):
                return visitor.visitExpr_list(self)
            else:
                return visitor.visitChildren(self)




    def expr_list(self):

        localctx = DashSQLParser.Expr_listContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_expr_list)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 152
            self.expr(0)
            self.state = 157
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,9,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 153
                    self.match(DashSQLParser.COMMA)
                    self.state = 154
                    self.expr(0) 
                self.state = 159
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,9,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Return_stmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def RETURN(self):
            return self.getToken(DashSQLParser.RETURN, 0)

        def expr(self):
            return self.getTypedRuleContext(DashSQLParser.ExprContext,0)


        def getRuleIndex(self):
            return DashSQLParser.RULE_return_stmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturn_stmt" ):
                listener.enterReturn_stmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturn_stmt" ):
                listener.exitReturn_stmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturn_stmt" ):
                return visitor.visitReturn_stmt(self)
            else:
                return visitor.visitChildren(self)




    def return_stmt(self):
